# wandb-bot

./: README.md  pyproject.toml
src/: app.py  chain.py  chat_prompt.json  config.py  eval.py  ingest.py  prompts.py
